Fix test breakage due to changes to GradleExecuter fixtures