@@ -132,6 +132,8 @@ task slow << { new URL("${server.uri}").text }
     }
 
     private GradleExecuter daemonExecutor() {
-        targetDist.executer(temporaryFolder).withDaemonBaseDir(toolingApi.daemonBaseDir).requireDaemon()
+        // Need to use the same JVM args to start daemon as those used by tooling api fixture
+        // TODO - use more sane JVM args here and for the daemons started using tooling api fixture
+        targetDist.executer(temporaryFolder).withDaemonBaseDir(toolingApi.daemonBaseDir).withGradleOpts("-Dorg.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError").requireDaemon()
     }
 }
